--- a/my-vue/index.html
+++ b/my-vue/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>my-vue</title>
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=yVvmS8nLtrnXbWmF3jzW3FHq1HHfkR2x"></script>
+
   </head>
   <body>
     <div id="app"></div>
